#pragma once
class Camion
{
private:
    /* data */
public:
    Camion(/* args */) {}
    ~Camion() {}
};