#pragma once
class Carro
{
private:
    /* data */
public:
    Carro(/* args */) {}
    ~Carro() {}
};