#pragma once
class Obstaculo
{
private:
    /* data */
public:
    Obstaculo(/* args */) {}
    ~Obstaculo() {}
};