#pragma once
class Plataforma
{
private:
    /* data */
public:
    Plataforma(/* args */) {}
    ~Plataforma() {}
};