#pragma once
class Puntos
{
private:
    /* data */
public:
    Puntos(/* args */) {}
    ~Puntos() {}
};