#pragma once
class Tortuga
{
private:
    /* data */
public:
    Tortuga(/* args */) {}
    ~Tortuga() {}
};