#pragma once
class Tronco
{
private:
    /* data */
public:
    Tronco(/* args */) {}
    ~Tronco() {}
};